src/Components/Schedule/Schedule.scss
@import '../../sass/variables.scss';

.schedule {
  height: 80vh;
}

.schedule-content {
  display: flex;
  justify-content: center;
  height: 100%;
}

.schedule-btn-container {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-items: center;
  margin: 7% 0;
  width: 40%;
  height: 40%;
}

.schedule-txt {
  h1 {
    font-size: 2.5rem;
  }
  display: flex;
  flex-direction: column;
  align-items: center;
  color: $font-color;
  font-size: 1.35rem;
  line-height: 1.6;
  margin: 5% 0;
}

.dates-list {
  p {
    font-size: 1.35rem;
  }
  h2 {
    font-weight: bold;
  }
  color: $font-color;
  font-size: 1.75em;
  overflow: hidden;
  padding: 4%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  min-height: 40vh;
}

.calendar-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 40%;
}


.schedule-continue-btn {
  cursor: pointer;
  background-color: #68749F;
  border: none;
  color: white;
  font-size: 1.5rem;
  font-family: $button-font;
  padding: 2% 10%;
  border-radius: 5px;
}

// calendar styling

.react-calendar {
  width: 27rem;;
  background: #29616E;
  border: 3px dotted $font-color;
  color: $font-color;
  font-family: 'Roboto Condensed', sans-serif;
  line-height: 4em;
  border-radius: 5px;
}
.react-calendar--doubleView {
  width: 700px;
}
.react-calendar--doubleView .react-calendar__viewContainer {
  display: flex;
  margin: -0.5em;
}
.react-calendar--doubleView .react-calendar__viewContainer > * {
  width: 50%;
  margin: 0.5em;
}
.react-calendar,
.react-calendar *,
.react-calendar *:before,
.react-calendar *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.react-calendar button {
  margin: 0;
  border: 0;
  outline: none;
}
.react-calendar button:enabled:hover {
  cursor: pointer;
}
.react-calendar__navigation {
  display: flex;
  height: 44px;
  margin-bottom: 1em;
}
.react-calendar__navigation button {
  min-width: 44px;
  background: none;
}
.react-calendar__navigation button:disabled {
  background-color: transparent;
}
.react-calendar__navigation button:enabled:hover,
.react-calendar__navigation button:enabled:focus {
  background-color: #e6e6e6;
}
.react-calendar__month-view__weekdays {
  text-align: center;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.75em;
  border-radius: 10px;
}
.react-calendar__month-view__weekdays__weekday {
  padding: 0.5em;
}
.react-calendar__month-view__weekNumbers .react-calendar__tile {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 0.75em;
  font-weight: bold;
}
.react-calendar__month-view__days__day--weekend {
  color: #9B6127;
}
.react-calendar__month-view__days__day--neighboringMonth {
  // color: #757575;
}
.react-calendar__year-view .react-calendar__tile,
.react-calendar__decade-view .react-calendar__tile,
.react-calendar__century-view .react-calendar__tile {
  padding: 2em 0.5em;
}
.react-calendar__tile {
  max-width: 100%;
  padding: 10px 6.6667px;
  background: none;
  text-align: center;
  line-height: 16px;
}
.react-calendar__tile:disabled {
  background-color: transparent;
}
.react-calendar__tile:enabled:hover,
.react-calendar__tile:enabled:focus {
  background-color: #e6e6e6;
}
.react-calendar__tile--now {
  background: #9B6127;
}
.react-calendar__tile--now:enabled:hover,
.react-calendar__tile--now:enabled:focus {
  background: #9B6127;
}
.react-calendar__tile--hasActive {
  // background: #29616E;
}
.react-calendar__tile--hasActive:enabled:hover,
.react-calendar__tile--hasActive:enabled:focus {
  background: #a9d4ff;
}
.react-calendar__tile--active {
  background: #9B6127;
  color: white;
}
.react-calendar__tile--active:enabled:hover,
.react-calendar__tile--active:enabled:focus {
  // background: #29616E;
}
.react-calendar--selectRange .react-calendar__tile--hover {
  background-color: #e6e6e6;
}




@media screen and (max-width: 1000px) {
  .schedule-content {
    flex-direction: column;
    justify-content: initial;
  }

  .calendar-wrapper {
    width: 90%;
  }

  .schedule-btn-container {
    width: 90%;

  }

  .schedule-txt {
    h1 {
      font-size: 1.35rem;
    }

    font-size: 1rem;
  }

  .dates-list {
    font-size: 1.35rem;

    p {
      font-size: 1rem;
    }
  }

  .schedule-continue-btn {
    font-size: 1.25rem;
  }
}

